--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<!-- Removed Font import as tags are removed -->
 
 <!-- Root Layout -->
 <BorderPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
@@ -26,24 +26,22 @@
       <!-- Split Pane for Library/Search and Queue/Lyrics -->
       <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-            <!-- Left Side: Library, Search, Filter -->
+            <!-- Left Side: Library, Search, Filter (Unchanged) -->
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <VBox spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <children>
-                        <Label text="Search Library:" />
+                        <Label text="Search Library:" styleClass="section-label"/> <!-- Added styleClass -->
                         <TextField fx:id="searchTextField" promptText="Enter title or artist..." />
-                        <Label text="Filter by Genre:" />
+                        <Label text="Filter by Genre:" styleClass="section-label"/> <!-- Added styleClass -->
                         <ComboBox fx:id="genreFilterComboBox" maxWidth="1.7976931348623157E308" promptText="All Genres" />
-                        <Label text="Song Library:" />
+                        <Label text="Song Library:" styleClass="section-label"/> <!-- Added styleClass -->
                         <TableView fx:id="songTableView" VBox.vgrow="ALWAYS">
                           <columns>
                             <TableColumn fx:id="titleColumn" prefWidth="150.0" text="Title" />
                             <TableColumn fx:id="artistColumn" prefWidth="120.0" text="Artist" />
                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
+                           <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY" /></columnResizePolicy>
                         </TableView>
                         <Button fx:id="addToQueueButton" mnemonicParsing="false" text="Add Selected to Queue" HBox.hgrow="NEVER" maxWidth="1.7976931348623157E308"/>
                      </children>
@@ -58,17 +56,19 @@
                   <VBox spacing="5.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <children>
                         <!-- Queue Display Section using TitledPane -->
-                        <TitledPane fx:id="queueTitledPane" animated="false" collapsible="true" expanded="true">
+                        <TitledPane fx:id="queueTitledPane" animated="false" collapsible="true" expanded="true" styleClass="queue-titled-pane"> <!-- Added styleClass -->
                            <graphic>
-                              <!-- Custom title area - ONLY the label remains -->
-                              <Label text="Up Next:" style="-fx-font-weight: bold; -fx-font-size: 14px;" />
+                              <!-- Removed inline style -->
+                              <Label text="Up Next:" styleClass="queue-header-label"/> <!-- Added styleClass -->
                            </graphic>
                            <content>
-                              <VBox fx:id="queueDetailBox" spacing="4.0" style="-fx-background-color: -fx-control-inner-background;">
+                              <!-- Removed inline style, Added styleClass -->
+                              <VBox fx:id="queueDetailBox" spacing="4.0" styleClass="queue-details">
                                  <children>
-                                    <Label fx:id="queueSong1Label" text="1. -" style="-fx-font-size: 13px;" />
-                                    <Label fx:id="queueSong2Label" text="2. -" style="-fx-font-size: 13px;" />
-                                    <Label fx:id="queueSong3Label" text="3. -" style="-fx-font-size: 13px;" />
+                                     <!-- Removed inline styles, Added styleClass -->
+                                    <Label fx:id="queueSong1Label" text="1. -" styleClass="queue-item-label"/>
+                                    <Label fx:id="queueSong2Label" text="2. -" styleClass="queue-item-label"/>
+                                    <Label fx:id="queueSong3Label" text="3. -" styleClass="queue-item-label"/>
                                  </children>
                                  <padding><Insets bottom="5.0" left="5.0" right="5.0" top="5.0" /></padding>
                               </VBox>
@@ -77,26 +77,21 @@
                         </TitledPane>
 
                         <!-- Queue Count Label -->
-                        <Label fx:id="queueCountLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" style="-fx-font-style: italic; -fx-font-size: 12px;" text="(+0 more)">
+                         <!-- Removed inline style, Added styleClass -->
+                        <Label fx:id="queueCountLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" styleClass="queue-count-label" text="(+0 more)">
                            <padding><Insets right="10.0" /></padding>
                         </Label>
 
                         <!-- Lyrics Display Section -->
                         <VBox fx:id="lyricsContainer" alignment="CENTER" spacing="8.0" styleClass="lyrics-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <Label fx:id="previousLyricLabel" styleClass="other-lyric" text="Previous Lyric Line" textAlignment="CENTER" wrapText="true">
-                                 <font><Font size="16.0" /></font>
-                              </Label>
+                               <!-- Removed Font tags, kept styleClass -->
+                              <Label fx:id="previousLyricLabel" styleClass="other-lyric" text="Previous Lyric Line" textAlignment="CENTER" wrapText="true"/>
                               <Label fx:id="currentLyricLabel" styleClass="current-lyric" text="Current Lyric Line Highlighted" textAlignment="CENTER" wrapText="true">
-                                 <font><Font name="System Bold" size="24.0" /></font>
                                  <VBox.margin><Insets bottom="5.0" top="5.0" /></VBox.margin>
                               </Label>
-                              <Label fx:id="next1LyricLabel" styleClass="other-lyric" text="Next Lyric Line" textAlignment="CENTER" wrapText="true">
-                                 <font><Font size="16.0" /></font>
-                              </Label>
-                              <Label fx:id="next2LyricLabel" styleClass="other-lyric" text="Second Next Lyric Line" textAlignment="CENTER" wrapText="true">
-                                 <font><Font size="16.0" /></font>
-                              </Label>
+                              <Label fx:id="next1LyricLabel" styleClass="other-lyric" text="Next Lyric Line" textAlignment="CENTER" wrapText="true"/>
+                              <Label fx:id="next2LyricLabel" styleClass="other-lyric" text="Second Next Lyric Line" textAlignment="CENTER" wrapText="true"/>
                            </children>
                            <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
                            <VBox.margin><Insets top="10.0" /></VBox.margin>
@@ -109,23 +104,25 @@
       </SplitPane>
    </center>
    <bottom>
-
       <!-- Bottom Area: Player Controls -->
       <VBox spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
-                  <Label fx:id="currentTimeLabel" minWidth="-Infinity" text="0:00" />
+                   <!-- Added styleClass -->
+                  <Label fx:id="currentTimeLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
                   <Slider fx:id="playbackSlider" HBox.hgrow="ALWAYS" />
-                  <Label fx:id="totalDurationLabel" minWidth="-Infinity" text="0:00" />
+                   <!-- Added styleClass -->
+                  <Label fx:id="totalDurationLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
                </children>
                <padding><Insets left="10.0" right="10.0" /></padding>
             </HBox>
-            <HBox alignment="CENTER" spacing="15.0">
+            <HBox alignment="CENTER" spacing="15.0" styleClass="control-button-bar"> <!-- Added styleClass -->
                <children>
                   <Button fx:id="playPauseButton" mnemonicParsing="false" prefWidth="80.0" text="Play" />
                   <Button fx:id="stopButton" mnemonicParsing="false" text="Stop" />
-                  <Button fx:id="nextButton" mnemonicParsing="false" text="Skip" />
+                   <!-- RENAMED fx:id -->
+                  <Button fx:id="skipButton" mnemonicParsing="false" text="Skip" />
                   <ToggleButton fx:id="fullscreenToggleButton" mnemonicParsing="false" text="Fullscreen" />
                   <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" text="Dark Mode" />
                </children>
