--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -139,7 +139,7 @@
                <HBox alignment="CENTER" spacing="15.0" styleClass="control-button-bar">
                   <!-- Buttons: playPauseButton, stopButton, skipButton, fullscreenToggleButton, themeToggleButton -->
                   <Button fx:id="playPauseButton" mnemonicParsing="false" prefWidth="80.0" text="Play" onAction="#handlePlayPause" />
-                  <Button fx:id="stopButton" mnemonicParsing="false" text="Stop" onAction="#handleSkip" />
+                  <Button fx:id="stopButton" mnemonicParsing="false" text="Stop" onAction="#handleStop" />
                   <Button fx:id="skipButton" mnemonicParsing="false" text="Skip" onAction="#handleSkip"/> <!-- Ensure onAction matches controller method -->
                   <ToggleButton fx:id="fullscreenToggleButton" mnemonicParsing="false" text="Fullscreen" onAction="#handleFullscreenToggle" />
                   <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" text="Dark Mode" onAction="#handleThemeToggle" />
