--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -1,219 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 
-<StackPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<!--
+    This is the new top-level MainView.fxml.
+    It uses a StackPane to manage the visibility of NormalView and FullscreenView.
+    It will be controlled by the refactored MainController.
+    The actual UI for normal and fullscreen modes are defined in
+    NormalView.fxml and FullscreenView.fxml respectively.
+-->
+<StackPane fx:id="rootStackPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <children>
-        <!-- Normal Application View -->
-        <BorderPane fx:id="normalViewRootPane" prefHeight="700.0" prefWidth="1000.0" styleClass="root-pane">
-            <center>
-                <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <items>
-                        <!-- Left Side: Library, Search, Filter -->
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                            <children>
-                                <VBox spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-                                    <children>
-                                        <Label styleClass="section-label" text="Search Library" />
-                                        <TextField fx:id="searchTextField" promptText="Enter title or artist..." />
-                                        <Label styleClass="section-label" text="Filter by Genre" />
-                                        <ComboBox fx:id="genreFilterComboBox" maxWidth="1.7976931348623157E308" promptText="All Genres" />
-                                        <Label styleClass="section-label" text="Song Library" />
-                                        <TableView fx:id="songTableView" VBox.vgrow="ALWAYS">
-                                            <columns>
-                                                <TableColumn fx:id="titleColumn" prefWidth="150.0" text="Title" />
-                                                <TableColumn fx:id="artistColumn" prefWidth="120.0" text="Artist" />
-                                            </columns>
-                                            <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
-                                        </TableView>
-                                        <Button fx:id="addToQueueButton" mnemonicParsing="false" onAction="#handleAddToQueue" text="Add Selected to Queue" maxWidth="1.7976931348623157E308" />
-                                    </children>
-                                </VBox>
-                            </children>
-                        </AnchorPane>
+        <!-- 
+            fx:id="normalView" allows the MainController to get a reference to the root node of NormalView.fxml.
+            If NormalView.fxml's root is a BorderPane, normalView can be injected as BorderPane.
+            The controller for NormalView.fxml (NormalViewController) will be automatically created
+            and can be injected into MainController if fx:id="normalViewController" is added like:
+            <fx:include fx:id="normalView" source="NormalView.fxml">
+                 <fx:script>
+                     var normalViewController = normalView.getController(); // This is one way, or direct injection
+                 </fx:script>
+            </fx:include>
+            Alternatively, the MainController can get a reference to the included controller by
+            naming the fx:id of the include tag with "Controller" appended, e.g., fx:id="normalViewContent".
+            Then, in MainController: @FXML private NormalViewController normalViewContentController;
 
-                        <!-- Right Side: Queue and Lyrics Display -->
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                            <children>
-                                <VBox spacing="5.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-                                    <children>
-                                        <!-- Queue Display Section -->
-                                        <TitledPane fx:id="queueTitledPane" animated="false" collapsible="true" expanded="true" styleClass="queue-titled-pane">
-                                            <graphic>
-                                                <Label styleClass="queue-header-label" text="Up Next" />
-                                            </graphic>
-                                            <content>
-                                                <VBox fx:id="queueDetailBox" spacing="4.0" styleClass="queue-details">
-                                                    <children>
-                                                        <Label fx:id="queueSong1Label" styleClass="queue-item-label" text="1. - " />
-                                                        <Label fx:id="queueSong2Label" styleClass="queue-item-label" text="2. - " />
-                                                        <Label fx:id="queueSong3Label" styleClass="queue-item-label" text="3. - " />
-                                                    </children>
-                                                    <padding>
-                                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                                    </padding>
-                                                </VBox>
-                                            </content>
-                                            <VBox.margin>
-                                                <Insets bottom="2.0" />
-                                            </VBox.margin>
-                                        </TitledPane>
-                                        <Label fx:id="queueCountLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" styleClass="queue-count-label" text="(+0 more)">
-                                            <padding>
-                                                <Insets right="10.0" />
-                                            </padding>
-                                        </Label>
+            For simplicity here, we'll assume MainController gets references via fx:id of the included Node
+            and its associated controller via the fx:id + "Controller" convention.
+            So, if fx:id="normalView", then @FXML private NormalViewController normalViewController;
+        -->
+        <fx:include fx:id="normalView" source="NormalView.fxml" />
 
-                                        <!-- Lyrics Display Section -->
-                                        <VBox fx:id="lyricsContainer" alignment="CENTER" spacing="8.0" styleClass="lyrics-container" VBox.vgrow="ALWAYS">
-                                            <children>
-                                                <Label fx:id="previousLyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
-                                                <Label fx:id="currentLyricLabel" styleClass="current-lyric" textAlignment="CENTER" wrapText="true">
-                                                    <VBox.margin>
-                                                        <Insets bottom="5.0" top="5.0" />
-                                                    </VBox.margin>
-                                                </Label>
-                                                <Label fx:id="next1LyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
-                                                <Label fx:id="next2LyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
-                                            </children>
-                                            <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                            </padding>
-                                        </VBox>
-                                    </children>
-                                </VBox>
-                            </children>
-                        </AnchorPane>
-                    </items>
-                </SplitPane>
-            </center>
-            <bottom>
-                <VBox spacing="5.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <!-- Now Playing HBox -->
-                        <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="now-playing-bar">
-                            <padding>
-                                <Insets left="10.0" right="10.0" top="5.0" bottom="5.0" />
-                            </padding>
-                            <children>
-                                <Label styleClass="now-playing-label-title" text="Now Playing: " />
-                                <Label fx:id="nowPlayingTitleLabel" styleClass="now-playing-label-info" text="-" HBox.hgrow="ALWAYS" maxWidth="Infinity"/>
-                                <Label fx:id="nowPlayingArtistLabel" styleClass="now-playing-label-info" text="-" minWidth="-Infinity"/>
-                            </children>
-                        </HBox>
-
-                        <!-- Slider and Time Labels HBox -->
-                        <HBox alignment="CENTER" spacing="10.0">
-                            <padding>
-                                <Insets left="10.0" right="10.0" />
-                            </padding>
-                            <children>
-                                <Label fx:id="currentTimeLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
-                                <Slider fx:id="playbackSlider" HBox.hgrow="ALWAYS" />
-                                <Label fx:id="totalDurationLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
-                            </children>
-                        </HBox>
-
-                        <!-- Control Buttons HBox -->
-                        <HBox alignment="CENTER" spacing="15.0" styleClass="control-button-bar">
-                            <children>
-                                <!-- Leftmost controls -->
-                                <ToggleButton fx:id="fullscreenToggleButton" mnemonicParsing="false" onAction="#handleFullscreenToggle" text="Fullscreen" />
-                                <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" onAction="#handleThemeToggle" text="Dark Mode" />
-
-                                <Region HBox.hgrow="ALWAYS" /> <!-- Spacer to push center controls -->
-
-                                <!-- Center controls -->
-                                <Button fx:id="playPauseButton" mnemonicParsing="false" onAction="#handlePlayPause" prefWidth="80.0" text="Play" />
-                                <Button fx:id="skipButton" mnemonicParsing="false" onAction="#handleSkip" text="Skip" />
-                                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#handleStop" text="Stop All" />
-                                
-                                <Region HBox.hgrow="ALWAYS" /> <!-- Spacer to push rightmost controls -->
-
-                                <!-- Gap before lyric timing controls (optional, can be adjusted/removed) -->
-                                <Region prefWidth="30.0" />
-
-                                <!-- Rightmost controls: Lyric Timing Adjustment -->
-                                <Button fx:id="increaseOffsetButton" mnemonicParsing="false" onAction="#handleIncreaseOffset" styleClass="lyric-offset-button" text="+" />
-                                <Label fx:id="lyricOffsetLabel" styleClass="lyric-offset-label" text="0 ms">
-                                    <HBox.margin>
-                                        <Insets left="5.0" right="5.0" />
-                                    </HBox.margin>
-                                </Label>
-                                <Button fx:id="decreaseOffsetButton" mnemonicParsing="false" onAction="#handleDecreaseOffset" styleClass="lyric-offset-button" text="-" />
-                            </children>
-                        </HBox>
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                    </padding>
-                </VBox>
-            </bottom>
-        </BorderPane>
-
-        <!-- Fullscreen View -->
-        <BorderPane fx:id="fullscreenViewRootPane" visible="false" styleClass="fullscreen-root-pane" stylesheets="@style.css">
-            <top>
-                <HBox fx:id="fullscreenTopBar" alignment="CENTER_LEFT" styleClass="fullscreen-top-bar">
-                    <padding><Insets top="10" right="20" bottom="10" left="20" /></padding>
-                    <children>
-                        <Label fx:id="fullscreenNextSongLabel" text="Next: -" styleClass="fullscreen-next-song-label"/>
-                        <Region HBox.hgrow="ALWAYS"/>
-                        <Label fx:id="fullscreenQueueCountLabel" text="(+0 more)" styleClass="fullscreen-queue-count-label"/>
-                    </children>
-                </HBox>
-            </top>
-            <center>
-                <VBox fx:id="fullscreenLyricsContainer" alignment="CENTER" spacing="15.0" styleClass="fullscreen-lyrics-container" BorderPane.alignment="CENTER">
-                    <padding><Insets top="20" right="20" bottom="20" left="20" /></padding>
-                    <children>
-                        <Label fx:id="fullscreenPreviousLyricLabel" styleClass="fullscreen-other-lyric" textAlignment="CENTER" wrapText="true"/>
-                        <Label fx:id="fullscreenCurrentLyricLabel" styleClass="fullscreen-current-lyric" textAlignment="CENTER" wrapText="true"/>
-                        <Label fx:id="fullscreenNext1LyricLabel" styleClass="fullscreen-other-lyric" textAlignment="CENTER" wrapText="true"/>
-                        <Label fx:id="fullscreenNext2LyricLabel" styleClass="fullscreen-other-lyric" textAlignment="CENTER" wrapText="true"/>
-                    </children>
-                </VBox>
-            </center>
-            <bottom>
-                <VBox styleClass="fullscreen-bottom-bar" spacing="5.0" BorderPane.alignment="CENTER">
-                    <padding><Insets top="10" right="20" bottom="20" left="20" /></padding>
-                    <children>
-                        <HBox alignment="CENTER" spacing="10.0">
-                            <children>
-                                <Label fx:id="fullscreenCurrentTimeLabel" styleClass="time-label fullscreen-time-label" text="0:00" minWidth="-Infinity"/>
-                                <Slider fx:id="fullscreenPlaybackSlider" HBox.hgrow="ALWAYS"/>
-                                <Label fx:id="fullscreenTotalDurationLabel" styleClass="time-label fullscreen-time-label" text="0:00" minWidth="-Infinity"/>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER" spacing="15.0" styleClass="fullscreen-controls-hbox">
-                            <children>
-                                <Button fx:id="fullscreenPlayPauseButton" text="Play" onAction="#handleFullscreenPlayPause" styleClass="fullscreen-button"/>
-                                <Button fx:id="fullscreenSkipButton" text="Skip" onAction="#handleFullscreenSkip" styleClass="fullscreen-button"/>
-                                <Region HBox.hgrow="ALWAYS"/>
-                                <ToggleButton fx:id="fullscreenExitButton" text="Exit Fullscreen" onAction="#handleExitFullscreenToggle" styleClass="fullscreen-button"/>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </bottom>
-        </BorderPane>
+        <!--
+            fx:id="fullscreenView" allows reference to the FullscreenView.fxml's root node.
+            visible="false" ensures it's hidden initially.
+            Its controller (FullscreenViewController) can be accessed similarly.
+            e.g., @FXML private FullscreenViewController fullscreenViewController;
+        -->
+        <fx:include fx:id="fullscreenView" source="FullscreenView.fxml" visible="false" />
     </children>
 </StackPane>
