--- a/src/view/FullscreenView.fxml
+++ b/src/view/FullscreenView.fxml
@@ -48,24 +48,22 @@
                         <Label fx:id="fullscreenTotalDurationLabel" styleClass="time-label fullscreen-time-label" text="0:00" minWidth="-Infinity"/>
                     </children>
                 </HBox>
-                <HBox alignment="CENTER" spacing="15.0" styleClass="fullscreen-controls-hbox"> <!-- Corresponds to control-button-bar -->
+                <HBox alignment="CENTER" spacing="15.0" styleClass="fullscreen-controls-hbox">
                     <children>
-                        <!-- Leftmost controls in fullscreen -->
-                        <ToggleButton fx:id="fullscreenExitButton" text="Exit Fullscreen" onAction="#handleExitFullscreenToggle" styleClass="fullscreen-button"/>
+                        <!-- Changed ToggleButton to Button for exiting fullscreen -->
+                        <Button fx:id="fullscreenExitButton" text="Exit Fullscreen" onAction="#handleExitFullscreenToggle" styleClass="fullscreen-button"/>
                         <ToggleButton fx:id="fullscreenThemeToggleButton" text="Dark Mode" onAction="#handleFullscreenThemeToggle" styleClass="fullscreen-button"/>
 
-                        <Region HBox.hgrow="ALWAYS"/> <!-- Spacer -->
+                        <Region HBox.hgrow="ALWAYS"/>
 
-                        <!-- Center controls in fullscreen -->
                         <Button fx:id="fullscreenPlayPauseButton" text="Play" onAction="#handleFullscreenPlayPause" styleClass="fullscreen-button" prefWidth="80.0"/>
                         <Button fx:id="fullscreenSkipButton" text="Skip" onAction="#handleFullscreenSkip" styleClass="fullscreen-button"/>
                         <Button fx:id="fullscreenStopButton" text="Stop All" onAction="#handleFullscreenStop" styleClass="fullscreen-button"/>
                         
-                        <Region HBox.hgrow="ALWAYS"/> <!-- Spacer -->
+                        <Region HBox.hgrow="ALWAYS"/>
 
-                        <Region prefWidth="30.0" /> <!-- Optional gap, consistent with normal view -->
+                        <Region prefWidth="30.0" />
 
-                        <!-- Rightmost controls in fullscreen: Lyric Timing Adjustment -->
                         <Button fx:id="fullscreenIncreaseOffsetButton" text="+" onAction="#handleFullscreenIncreaseOffset" styleClass="lyric-offset-button fullscreen-lyric-offset-button"/>
                         <Label fx:id="fullscreenLyricOffsetLabel" text="0 ms" styleClass="lyric-offset-label fullscreen-lyric-offset-label">
                             <HBox.margin><Insets left="5.0" right="5.0" /></HBox.margin>
