--- a/src/view/style.css
+++ b/src/view/style.css
@@ -160,11 +160,12 @@
     -fx-pref-width: 35px;
     -fx-max-width: 35px;
     -fx-background-color: #f0f0f0;
-    -fx-text-fill: black;
+    -fx-text-fill: black; /* Text should be black */
     -fx-border-color: #d0d0d0;
     -fx-border-width: 1px;
     -fx-border-radius: 3px;
     -fx-background-radius: 3px;
+    -fx-padding: 5px;
 }
 .lyric-offset-button:hover {
     -fx-background-color: #e0e0e0;
